audit: close S00 foundation audit
Closes the pre-G1 clean-room foundation audit on the exact reviewed tree. Includes blocking foundation repairs, adversarial/holdout tests, 25/25 directed mutation kills, 242/242 server GameTests, real client/integrated/dedicated evidence, component classifications and the non-normative S00 execution log. Removes all temporary S00 transport scaffolding. Does not start G1/S01 and does not modify main.